// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders correctly 1`] = `
<div
  className="Panel"
>
  <div
    className="Accent accent-orange"
  />
  <Header
    actions={
      Array [
        Object {
          "content": "Action",
        },
      ]
    }
    title="title"
  />
  <Panel.Section>
    Foo
  </Panel.Section>
</div>
`;

exports[`Panel renders correctly with footer 1`] = `
<div
  className="Footer"
>
  <Grid>
    <Grid.Column
      xs={6}
    >
      <div
        className="Left"
      >
        <span>
          left
        </span>
      </div>
    </Grid.Column>
    <Grid.Column
      xs={6}
    >
      <div
        className="Right"
      >
        right
      </div>
    </Grid.Column>
  </Grid>
</div>
`;

exports[`Panel renders correctly with sections 1`] = `
<div
  className="Header"
>
  <div
    className="HeaderText"
  >
    title
  </div>
</div>
`;

exports[`Panel renders correctly with sections 2`] = `
<div
  className="Body"
>
  <div
    className="SectionContent"
  >
    Foo
  </div>
  <div
    className="Actions"
  >
    <Button.Group>
      <Button
        flat={true}
        key="0"
        size="small"
      >
        Action
      </Button>
    </Button.Group>
  </div>
</div>
`;

exports[`Panel renders correctly with sections 3`] = `
<div
  className="Body"
>
  <div
    className="SectionContent"
  >
    Bar
  </div>
</div>
`;
